--- a/index.html
+++ b/index.html
@@ -7,19 +7,8 @@
 </head>
 <body>
 <script type="text/javascript" src="point.min.js"></script>
-<!-- <script type="text/javascript" src="game.js"></script>
- --><script src="https://vk.com/js/api/xd_connection.js?2"  type="text/javascript"></script>
-
-
-<script type="text/javascript"> 
-  VK.init(function() { alert('Добрый день'); }, function() { alert("err!!!"); }, '5.68'); 
-</script>
-
-<script type="text/javascript">
-<!--
-
-//-->
-</script>
+<script type="text/javascript" src="game.js"></script>
+<script src="https://vk.com/js/api/xd_connection.js?2"  type="text/javascript"></script>
 
 </body>
 </html>
