--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta name="viewport" content="width=device-width,user-scalable=no"/>
-	<title>PointJS Game</title>
+	<title>YUMOR Game</title>
 </head>
 <body>
 <script type="text/javascript" src="point.min.js"></script>
+	<h1 style="color:dark-gray;>Привет! Я игра, написана в блакноте, спицально для ВК<h1/>
+	<h4 style="color:gray;">Потом поиграешь, игра сейчас на обеде<h4/>
 <script type="text/javascript" src="game.js"></script>
 
 </body>
