--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<title>YUMOR Game</title>
 </head>
 <body>
-<script type="text/javascript" src="point.min.js"></script>
+<!--<script type="text/javascript" src="point.min.js"></script>-->
 	<h1 style="color:dark-gray;>Привет! Я игра, написана в блакноте, спицально для ВК<h1/>
-<script type="text/javascript" src="game.js"></script>
+<!--<script type="text/javascript" src="game.js"></script>-->
 
 </body>
 </html>
