--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 	<title>YUMOR Game</title>
 </head>
 <body>
-
-	<h1 style="color:dark-gray;>Привет! Я игра, написана в блакноте, спицально для поиграть.<h1/>
+	<div style="background-color:#01f1ac;">
+		<h1 style="color:dark-gray;>Привет! Я игра, написана в блакноте, спицально для поиграть.<h1/>
 		<p>Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem.</p>
-
-
+	</div>
 </body>
 </html>
