edit path to img

--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@ var fg = new Image();
 var pipeUp = new Image();
 var pipeBottom = new Image();
 
-bird.src = "img/bird.png";
-bg.src = "img/bg.png";
-fg.src = "img/fg.png";
-pipeUp.src = "img/pipeUp.png";
-pipeBottom.src = "img/pipeBottom.png";
+bird.src = "bird.png";
+bg.src = "bg.png";
+fg.src = "fg.png";
+pipeUp.src = "pipeUp.png";
+pipeBottom.src = "pipeBottom.png";
 
 // Звуковые файлы
 var fly = new Audio();
 var score_audio = new Audio();
 
-fly.src = "audio/fly.mp3";
-score_audio.src = "audio/score.mp3";
+fly.src = "fly.mp3";
+score_audio.src = "score.mp3";
 
 var gap = 90;
 
