--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@ var fg = new Image();
 var pipeUp = new Image();
 var pipeBottom = new Image();
 
-bird.src = "bird.png";
-bg.src = "bg.png";
-fg.src = "fg.png";
-pipeUp.src = "pipeUp.png";
-pipeBottom.src = "pipeBottom.png";
+bird.src = "img/bird.png";
+bg.src = "img/bg.png";
+fg.src = "img/fg.png";
+pipeUp.src = "img/pipeUp.png";
+pipeBottom.src = "img/pipeBottom.png";
 
 // Звуковые файлы
 var fly = new Audio();
