--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	#canvas{background-color:#0ff;}
 </style>
  <!-- <canvas id="canvas" width="388" height="512"></canvas> -->
-<canvas id='example'> :( Обновите браузер :( </canvas>
+<canvas id='example'width="100" height="100"> :( Обновите браузер :( </canvas>
 
 <script type="text/javascript">
 	function getParent(el){
