--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 	var y_size = 0;
 	x_size = parent.offsetWidth;
 	y_size = parent.offsetHeight;
-	alert('X = ' + x_size);
-	alert('Y = ' + y_size);
+	//alert('X = ' + x_size + '; Y = ' + y_size);
 	canvas.width = x_size;
 	canvas.height = y_size;
+	ctx.fillStyle = "#2a5885";
 	ctx.fillRect(0, 0, canvas.width, canvas.height);
 </script>
 <!--
