--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 <style type="text/css">
-	#canvas{background-color:#0ff;}
+	#canvas{
+	  background-color:#0ff;
+	  margin:0;
+	  padding:0;
+	}
 </style>
  <!-- <canvas id="canvas" width="388" height="512"></canvas> -->
 <canvas id='example'width="100" height="100"> :( Обновите браузер :( </canvas>
