--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 	}
 </style>
  <!-- <canvas id="canvas" width="388" height="512"></canvas> -->
-<canvas id='example'width="100" height="100"> :( Обновите браузер :( </canvas>
+<canvas id="canvas" width="100" height="100"> :( Обновите браузер :( </canvas>
 
 <script type="text/javascript">
 	function getParent(el){
 		return el.parentElement || el.parentNode; 
 	}
-	var canvas = document.getElementById("example"),
+	var canvas = document.getElementById("canvas"),
 		ctx    = example.getContext('2d');
 	var parent = getParent(canvas);
 	var x_size = 0;
