--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	var y_size = 0;
 	x_size = parent.offsetWidth;
 	y_size = parent.offsetHeight;
-	//alert('X = ' + x_size + '; Y = ' + y_size);
+	alert('X = ' + x_size + '; Y = ' + y_size);
 	canvas.width = x_size;
 	canvas.height = y_size;
 	ctx.fillStyle = "#2a5885";
