--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
 	  padding:0;
 	}
 </style>
- <!-- <canvas id="canvas" width="388" height="512"></canvas> -->
-<canvas id="canvas" width="100" height="100"> :( Обновите браузер :( </canvas>
-
+<canvas id="canvas"> :( Обновите браузер :( </canvas>
 <script type="text/javascript">
 	function getParent(el){
 		return el.parentElement || el.parentNode; 
 	}
 	var canvas = document.getElementById("canvas"),
-		ctx    = example.getContext('2d');
+	       ctx = example.getContext('2d');
 	var parent = getParent(canvas);
 	var x_size = 0;
 	var y_size = 0;
@@ -33,99 +31,7 @@
 	ctx.fillStyle = "#2a5885";
 	ctx.fillRect(0, 0, canvas.width, canvas.height);
 </script>
-<!--
-<script type="text/javascript">
-var cvs = document.getElementById("canvas");
-var ctx = cvs.getContext("2d");
 
-var bird = new Image();
-var bg = new Image();
-var fg = new Image();
-var pipeUp = new Image();
-var pipeBottom = new Image();
-
-bird.src = "img/bird.png";
-bg.src = "img/bg.png";
-fg.src = "img/fg.png";
-pipeUp.src = "img/pipeUp.png";
-pipeBottom.src = "img/pipeBottom.png";
-
-// Звуковые файлы
-var fly = new Audio();
-var score_audio = new Audio();
-
-fly.src = "fly.mp3";
-score_audio.src = "score.mp3";
-
-var gap = 90;
-
-// При нажатии на какую-либо кнопку
-document.addEventListener("keydown", moveUp);
-
-function moveUp() {
- yPos -= 25;
- fly.play();
-}
-
-// Создание блоков
-var pipe = [];
-
-pipe[0] = {
- x : cvs.width,
- y : 0
-}
-
-var score = 0;
-// Позиция птички
-var xPos = 10;
-var yPos = 150;
-var grav = 1.5;
-
-function draw() {
- ctx.drawImage(bg, 0, 0);
-
- for(var i = 0; i < pipe.length; i++) {
- ctx.drawImage(pipeUp, pipe[i].x, pipe[i].y);
- ctx.drawImage(pipeBottom, pipe[i].x, pipe[i].y + pipeUp.height + gap);
-
- pipe[i].x--;
-
- if(pipe[i].x == 125) {
- pipe.push({
- x : cvs.width,
- y : Math.floor(Math.random() * pipeUp.height) - pipeUp.height
- });
- }
-
- // Отслеживание прикосновений
- if(xPos + bird.width >= pipe[i].x
- && xPos <= pipe[i].x + pipeUp.width
- && (yPos <= pipe[i].y + pipeUp.height
- || yPos + bird.height >= pipe[i].y + pipeUp.height + gap) || yPos + bird.height >= cvs.height - fg.height) {
- location.reload(); // Перезагрузка страницы
- }
-
- if(pipe[i].x == 5) {
- score++;
- score_audio.play();
- }
- }
-
- ctx.drawImage(fg, 0, cvs.height - fg.height);
- ctx.drawImage(bird, xPos, yPos);
-
- yPos += grav;
-
- ctx.fillStyle = "#000";
- ctx.font = "24px Verdana";
- ctx.fillText("Score: " + score, 10, cvs.height - 20);
-
- requestAnimationFrame(draw);
-}
-
-pipeBottom.onload = draw;
-	
-</script> -->
 
 </body>
 </HTML>
