--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <title>Flappy Bird!</title>
 </head>
 <body>
-<canvas id="canvas"> :( Обновите браузер :( </canvas>
+<canvas id='canvas'> :( Обновите браузер :( </canvas>
 <script type="text/javascript">
 	function getParent(el){
 		return el.parentElement || el.parentNode; 
