--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
  <title>Flappy Bird!</title>
 </head>
 <body>
-<canvas id='canvas' width='150px' height='150px'> :( Обновите браузер :( </canvas>
+<canvas id='mrz_canvas' width='150px' height='150px'> :( Обновите браузер :( </canvas>
 <script type="text/javascript">
 	function getParent(el){
 		return el.parentElement || el.parentNode; 
 	}
-	var canvas = document.getElementById("canvas"),
+	var canvas = document.getElementById("mrz_canvas"),
 	       ctx = example.getContext('2d');
 	var parent = getParent(canvas);
 	var x_size = 0;
