--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta name="Author" content="moroz69off">
   <meta name="Keywords" content="moroz69off">
   <meta name="Description" content="moroz69off">
-  <title>Canvas04</title>
+  <title>Canvas04|moroz69off</title>
  </head>
 
  <body>
      <style type="text/css">
          body{margin:0;padding:0;width:100%;height:100%;}
      </style>
-     <canvas id="m_canvas"></canvas>
+     <canvas id="m_canvas">|:)|</canvas>
      <script type="text/javascript">
          //=====================================================
          function clearParticles() {// Удаляем все частицы
@@ -80,7 +80,7 @@
          }
 
          function drawFrame() {
-             context.fillStyle = "#00ffff";
+             context.fillStyle = "#E1E5EB";
              context.fillRect(0, 0, w, h);
              if (particles.length < 8) addParticle();
              for (i = 0; i < particles.length; i++) {
